# boardgames

./: Cargo.toml
client/: Cargo.toml  index.html
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
types/: Cargo.toml
types/src/: lib.rs
