[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.155"
serde_json = "1.0.94"
web-sys = "0.3.61"
yew = { version = "0.20", features = ["csr"] }
