[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.10", features = ["macros"] }
itertools = "0.10.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
types = { path = "../types" }
